changed the last part

--- a/index.html
+++ b/index.html
@@ -222,6 +222,7 @@
 
     <div class="mt-5 p-4 bg-dark text-white text-center">
         <p>Thanks for visiting !</p>
+        <p>&#169; Manaswi Raj</p>
     </div>
 
 </body>
